--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "mongoose": "^6.5.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
+    "path": "^0.12.7",
+    "request-ip": "^3.3.0",
+    "shortid": "^2.2.16",
     "validator": "^13.7.0",
     "winston": "^3.8.1"
   }
